完成dxh网关设备检测功能，增加通知日志页面